# CAOS_CutoffGrade

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements-precompute.txt  requirements.txt
data-pipeline/cglab/: __init__.py  live.py  pipeline.py  registry.py
data-pipeline/cglab/cases/: lane_cases.py
data-pipeline/cglab/core/: gate.py  manifest.py  trace.py
data-pipeline/cglab/io/: contract.py  schema.py
data-pipeline/cglab/model/: __init__.py  (+1 more)
data/derived/: case-results.json  cg-learned.json  cutoff-surrogate.onnx  scenario-ood.onnx
data/examples/: deposits.csv
deploy/: pages.md
docs/: README.md  architecture.md  cases.md  frameworks.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  04_live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md
docs/cases/: README.md
docs/frameworks/: 01_economics.md  02_viz.md  03_torch-onnx.md
docs/guides/: 00_instantiate.md  01_precompute-pipeline.md  02_bring-your-own-data.md  03_gpu-lane.md  04_run-the-api.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: CNAME
frontend/src/: App.tsx  architecture.ts  cutoffgrade.css  main.tsx
frontend/test/: contract.test.ts  lane.test.ts
scripts/: precompute.ps1  precompute.sh
tests/: conftest.py  test_contract.py  test_manifest.py  test_pipeline_smoke.py
(+66 files in other folders)
